syntax = "proto3";

option optimize_for = LITE_RUNTIME;
package msg;

import "auth.proto";
import "control.proto";
import "stream.proto";

message Packet {
    int32 extra_data_len = 1;

    oneof msg {
        DesktopFrame desktop_frame = 2;
        CursorShape cursor_shape = 3;
        AudioFrame audio_frame = 4;

        ClientIntro client_intro = 200;
        ServerIntro server_intro = 201;
        QueryHostCapsRequest query_host_caps_request = 202;
        QueryHostCapsResponse query_host_caps_response = 203;
        ConfigureStreamRequest configure_stream_request = 204;
        ConfigureStreamResponse configure_stream_response = 205;
        StartStreamRequest start_stream_request = 206;
        StartStreamResponse start_stream_response = 207;
        StopStreamRequest stop_stream_request = 208;
        StopStreamResponse stop_stream_response = 209;

        AuthRequest auth_request = 300;
        ServerPartialHashNotify server_partial_hash_notify = 301;
        ServerNonceNotify server_nonce_notify = 302;
        ClientNonceNotify client_nonce_notify = 303;
        AuthResponse auth_response = 304;
    }
}
