syntax = "proto3";

option optimize_for = LITE_RUNTIME;
package msg;

message ServerPerfReport {
    float capture_min = 1;
    float capture_avg = 2;
    float capture_max = 3;

    float encoder_min = 5;
    float encoder_avg = 6;
    float encoder_max = 7;
}

// Extra data contains desktom image (encoded)
message DesktopFrame {
    bool cursor_visible = 2;
    int32 cursor_x = 3;
    int32 cursor_y = 4;
}

// Extra data contains cursor image (raw RGBA)
message CursorShape {
    int32 width = 2;
    int32 height = 3;

    float hotspot_x = 4;
    float hotspot_y = 5;
}

// Extra data contains opus audio stream
message AudioFrame {
    int32 channels = 1;

    bool is_first_packet = 2;
}

message MouseInput {
    bool is_abs = 1;

    int32 dx = 2;
    int32 dy = 3;

    // Primary (left)
    // Secondary (right)
    // Auxiliary (mid)
    // 4th (back), 5th (forward), ...
    repeated int32 buttons = 6;
}

message KeyboardInput {
    repeated int32 scancodes = 1;
}
